src/patterns/navbox/_navbox.scss
/*********************************/
/* BEGIN Pattern: navbox         */
/*********************************/

.navbox {
	position: relative;
	margin-bottom: 30px;
}

.navbox-image img {
	width: 100%!important;
	height: auto!important;
}

.navbox-title {
	background: $sta-blue-T;
	background-repeat: repeat;
	bottom: 0;
	color: white!important;
	width: 100%;
	position: absolute;
	padding: 15px 15px;
	font-size: 24px;
	font-weight: bold;
	text-shadow: 1px 1px 1px rgb(68, 68, 68);
	@include -dpl-transition();
}

.navbox-title:before {
	@extend i.chevron;
	content: "";
	float: right;
	height: 35px !important;
	width: 30px !important;
	top: 0 !important;
}

.navbox-title a {
	color: white !important;
	text-decoration: none;
	margin-right: 4px;
}

.navbox:hover{
	cursor:pointer;
}

.navbox-title:hover, .navbox:hover .navbox-title{
	background: $sta-blue-T-hover;
}

.navbox-title p {
	margin-bottom: 0;
}

.navbox-title acronym {
	display: none;
}


/* .navbox-title is the first child of .navbox when
	 .navbox-image is not showing (i.e. not present). */

.navbox-title:first-child {
	background: $sta-blue;
	position: relative;
	bottom: auto;
}
.navbox-title:first-child:hover,
.navbox:hover .navbox-title:first-child{
	background: $sta-blue-hover;
}

/* when a p tag immediately follows a navbox
   tighten up the margin a bit. */

.navbox + p {
	margin-top: -20px;
}



@media (max-width: 991px) and (min-width: 768px) {

	/* Make the title show below instead of on top of the image... */
  .navbox-title {
  	position: relative;
  	font-size: 21px;
  }

  /* ... and switch to non-transprent background colour. */

  .navbox-title {
		background: $sta-blue;
	}

  .navbox-title:hover, .navbox:hover .navbox-title{
		background: $sta-blue-hover;
	}

	.navbox-title:before {
  		display: none;
	}



}

@media (max-width: 767px) {

	.navbox {
		margin-bottom: 2em;
	}

	.navbox-image {
  		max-height: 65px;
		overflow: hidden;
  	}

  	.navbox-image img {
  		margin-top: -20%;
  	}

  	.navbox-title {
		top: 0;
	}

}

/*********************************/
/* END Pattern: navbox           */
/*********************************/

